--- a/index.html
+++ b/index.html
@@ -226,6 +226,13 @@
           </div>
         </div>
       </section>
+
+      <!-- Footer -->
+      <div class="footer">
+        <div class="footer-text">
+          <a href="https:www.yourdomain.com">www.yourdomain.com</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
